tests/invalid/VarDecl_Invalid_4.whiley
type nat is (int x) where x >= 0

function f(int x) -> (nat r):
    nat y = x
    return y
